# streaming-data-playground

./: .gitignore  Justfile  README.md  namespace-default.yaml  nohup.out  pod-cluster-01-kafka-0.yaml  pod-kafka-0.yaml  tmp
.devcontainer/: devcontainer.json
deploy/: clean_deploy_all.sh  install-java.sh  kafka-client-producer.yml  (+5 more)
development/streaming_anomaly_detection/data-simulator/: pyproject.toml
development/streaming_anomaly_detection/data-simulator/dev/: publish-test.py
development/streaming_anomaly_detection/data-simulator/src/simulator/app/background_tasks_helper/: __init__.py
development/streaming_anomaly_detection/data-simulator/src/simulator/app/routers/: gaussian_data.py
development/streaming_anomaly_detection/data-simulator/src/simulator/core/: __init__.py
development/streaming_anomaly_detection/data-simulator/src/simulator/core/data_generators/: abstract_sampler.py  gaussian_sampler.py
development/streaming_anomaly_detection/data-simulator/src/simulator/core/data_generators/anomalies/: __init__.py
development/streaming_anomaly_detection/data-simulator/src/simulator/core/publishers/: abstract_publisher.py  kafka_publisher.py  log_publisher.py
microservices/composer/: Dockerfile  pyproject.toml  requirements.txt
microservices/composer/src/composer/api/: time_series.py
microservices/composer/src/composer/app/: main.py
microservices/composer/src/composer/core/data_generators/: gaussian_sampler.py
microservices/composer/src/composer/core/event_publisher/: __init__.py
microservices/composer/src/composer/core/kafka/: __init__.py
microservices/composer/src/composer/core/kafka_publisher/: __init__.py
microservices/composer/src/composer/core/publishers/: log_publisher.py
microservices/composer/src/composer/core/time_series_generator/: __init__.py
microservices/flink/flink-anomaly-detection/: pyproject.toml
microservices/flink/flink-anomaly-detection/src/: job.py  process_window_function.py  tumbling_event_window.py
microservices/simulator/: Dockerfile  pyproject.toml
microservices/simulator/dev/: call-handler.py
microservices/simulator/src/simulator/api/: time_series.py
microservices/simulator/src/simulator/app/: main.py
microservices/simulator/src/simulator/core/data_generators/: gaussian_sampler.py
microservices/simulator/src/simulator/core/publishers/: abstract_publisher.py  kafka.py  kafka_publisher.py  log_publisher.py
(+131 files in other folders)
