[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "composer"
version = "0.1.0"
description = "Publish time series with anomalies"
authors = ["Domenico Di Gangi <digangidomenico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
confluent-kafka = "^2.2.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
pydantic = "^2.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
composer = "composer.app.main:main"

[tool.poetry.extras]

