[build-system]
requires = ["poetry-core>=1.0.0", "pip==20.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flink-anomaly-detection"
version = "0.1.0"
description = "Description of your project."
authors = ["Domenico Di Gangi <digangidomenico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.18"
apache-flink = "1.15.2"
requests = "*"
numpy = "*"

[tool.poetry.scripts]
job1 = "flink-anomaly-detection.src.job1:main"


